[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Tank.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/upgraded_player.png" type="Texture" id=5]
[ext_resource path="res://Player/upgraded_player2.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.29728, 5.45353 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Upgrade1",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Upgrade2",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6.95515, 5.45353 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 103
script = ExtResource( 2 )

[node name="Tank" parent="." instance=ExtResource( 3 )]

[node name="Hurtbox" parent="Tank" index="0"]
collision_layer = 8

[node name="CollisionShape2D" parent="Tank/Hurtbox" index="0"]
position = Vector2( 0, 0.219294 )
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="Tank" index="2"]
frames = SubResource( 8 )
animation = "Normal"

[node name="CannonTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.146194, 0.292391 )
shape = SubResource( 9 )
[connection signal="max_shells_in_flight_changed" from="Tank/Stats" to="." method="_on_Stats_max_shells_in_flight_changed"]
[connection signal="on_zero_health" from="Tank/Stats" to="." method="_on_Stats_on_zero_health"]
[connection signal="timeout" from="CannonTimer" to="." method="_on_CannonTimer_timeout"]

[editable path="Tank"]

[editable path="Tank/Hurtbox"]
